force-app/main/default/objects/InterfaceLog__c/InterfaceLog__c.object-meta.xml
<CustomObject>
    <label>InterfaceLog</label>
    <nameField>
        <label>No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InterfaceLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>