force-app/main/default/objects/InterfaceLog__c/fields/ErrorMsg__c.field-meta.xml
<CustomField>
    <fullName>ErrorMsg__c</fullName>
    <label>ErrorMsg</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>