force-app/main/default/objects/InterfaceLog__c/fields/IsSuccess__c.field-meta.xml
<CustomField>
    <fullName>IsSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>