force-app/main/default/objects/InterfaceLog__c/fields/Req_Json__c.field-meta.xml
<CustomField>
    <fullName>Req_Json__c</fullName>
    <label>Req Json</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>