force-app/main/default/objects/InterfaceLog__c/fields/Res_Json__c.field-meta.xml
<CustomField>
    <fullName>Res_Json__c</fullName>
    <label>Res Json</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>