force-app/main/default/objects/InterfaceLog__c/fields/ReturnCode__c.field-meta.xml
<CustomField>
    <fullName>ReturnCode__c</fullName>
    <label>ReturnCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>