force-app/main/default/objects/InterfaceLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>ReturnCode__c</columns>
    <columns>Req_Json__c</columns>
    <columns>ErrorMsg__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>