force-app/main/default/objects/InterfaceLog__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>ReturnCode__c</columns>
    <columns>Req_Json__c</columns>
    <columns>ErrorMsg__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Site Guest User 海信站点</value>
    </filters>
    <label>Copy of expo</label>
</ListView>