force-app/main/default/objects/InterfaceLog__c/listViews/expo_sso.listView-meta.xml
<ListView>
    <fullName>expo_sso</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>ReturnCode__c</columns>
    <columns>Req_Json__c</columns>
    <columns>ErrorMsg__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>equals</operation>
        <value>ExhibitionSSOVerifyController</value>
    </filters>
    <label>expo sso</label>
</ListView>