force-app/main/default/objects/InterfaceLog__c/listViews/MDG.listView-meta.xml
<ListView>
    <fullName>MDG</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>ErrorMsg__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>equals</operation>
        <value>SyncCustomerInfoToMDG</value>
    </filters>
    <label>MDG</label>
</ListView>