force-app/main/default/objects/InterfaceLog__c/listViews/My_InterfaceLogs.listView-meta.xml
<ListView>
    <fullName>My_InterfaceLogs</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>ReturnCode__c</columns>
    <columns>Req_Json__c</columns>
    <columns>ErrorMsg__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>My InterfaceLogs</label>
</ListView>