force-app/main/default/objects/InterfaceLog__c/listViews/Today_s_Log_List.listView-meta.xml
<ListView>
    <fullName>Today_s_Log_List</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Req_Json__c</columns>
    <columns>ReturnCode__c</columns>
    <columns>ErrorMsg__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>ReturnCode__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Today&apos;s Error Log List</label>
</ListView>